2005-02-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: send the headers when we're supposed to write
	a POST/PUT but call GetResponse before GetRequestStream.

	* WebConnectionStream.cs: new RequestWritten property.

2005-01-20  Jonathan Pryor  <jonpryor@vt.edu>

	* WebHeaderCollection.cs: Fix GetValues(string) to split the values on
	  commas if the header is a Multi-Value header.  This matches
	  MonoTests.System.Net.WebHeaderCollectionTest.

2004-12-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnectionStream.cs: remove unneeded check. Write detects and
	triggers the exception now.

2004-12-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthenticationManager.cs: don't lock on a public Type.
	* HttpWebRequest.cs: read the error response for auth. errors.

2004-12-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: set webResponse back to null when redirecting.
	Fix the previous patch so that it reads the whole response even if
	auto-redirect is not enabled. Closes bug #70484.

2004-12-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebResponse.cs: added ReadAll method.

	* WebConnection.cs: in HandleError, set the response error after
	closing the socket. Use an async. delegate to finish reading any prior
	WebConnectionStream.

	* HttpWebRequest.cs: for error responses that allow content, read the
	stream immediately. Fixes bug #70483.

2004-12-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CookieContainer.cs: quote the port number.

2004-12-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs:
	* WebConnectionStream.cs: removed TryReconnect. It's no longer needed.

2004-12-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs: set the event in Close so that if the queue is
	empty, we won't block forever on next request. The finalizer was
	removed because we're not implementing IDisposable pattern here.

2004-12-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>
